First part of HTML done

--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
     <link rel="icon" type="image/png" href="images/billy.png">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-  <title></title>
+  <title>Animated Cintact Form 2</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="content">
+      <div class="telephone-wrapper">
+        <div class="telephone">
+          <div class="handset"></div>
+          <div class="dialing"></div>
+          <div class="stand"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
