Styling background and phone unit.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="content">
-      <div class="telephone-wrapper">
+    <div class="content center">
+      <div class="telephone-wrapper center">
         <div class="telephone">
           <div class="handset"></div>
           <div class="dialing"></div>
