Created completed phone

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="telephone-wrapper center">
         <div class="telephone">
           <div class="handset"></div>
-          <div class="dialing"></div>
+          <div class="dial"></div>
           <div class="stand"></div>
         </div>
       </div>
