HTML for form done.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
           <div class="stand"></div>
         </div>
       </div>
+      <div class="form-wrapper">
+        <h3 class="form-heading">Contact Us</h3>
+        <form>
+          <input type="text" placeholder="Name">
+          <input type="email" placeholder="Email">
+          <textarea placeholder="Message"></textarea>
+          <input type="submit" value="Submit" class="form-btn">
+        </form>
+      </div>
     </div>
   </div>
 </body>
