Begin styling form

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <div class="stand"></div>
         </div>
       </div>
-      <div class="form-wrapper">
+      <div class="form-wrapper center">
         <h3 class="form-heading">Contact Us</h3>
-        <form>
+        <form class="center">
           <input type="text" placeholder="Name">
           <input type="email" placeholder="Email">
           <textarea placeholder="Message"></textarea>
