--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="content center">
+    <div class="contact center">
       <div class="telephone-wrapper center">
         <div class="telephone">
           <div class="handset"></div>
