--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="images/billy.png">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-  <title>Animated Cintact Form 2</title>
+  <title>Animated Contact Form 2</title>
 </head>
 <body>
   <div class="container">
